force-app/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <description>Used for logging Debug Log events to get around DML rollback restrictions.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>