force-app/main/default/objects/Log_Event__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Store the case id for which logs are created</description>
    <label>Case Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>