force-app/main/default/objects/Log_Event__e/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>