force-app/main/default/objects/Log_Event__e/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Apex class name.</description>
    <label>Class</label>
    <length>40</length>
    <type>Text</type>
</CustomField>