force-app/main/default/objects/Log_Event__e/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>