force-app/main/default/objects/Log_Event__e/fields/Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Stacktrace__c</fullName>
    <label>Stacktrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>